tests/typing/should_fail/same_args_in_method.java
package tutu.titi.toto;

class A {
	public int method1(int i, int i) {
		return 1;
	}
}
